--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -15,13 +15,13 @@
 
 
 @article{FJames2006,
-author = {James, Frederick},
-year = {2006},
-month = {11},
-pages = {},
-title = {Statistical Methods in Experimental Physics: 2nd Edition},
-isbn = {978-981-256-795-6},
-doi = {10.1142/6096}
+    author = {James, Frederick},
+    year = {2006},
+    month = {11},
+    pages = {},
+    title = {Statistical Methods in Experimental Physics: 2nd Edition},
+    isbn = {978-981-256-795-6},
+    doi = {10.1142/6096}
 }
 
 
@@ -35,4 +35,55 @@ doi = {10.1142/6096}
     archivePrefix = {arXiv},
     primaryClass = {astro-ph.IM},
     eprint = {2105.03468}
+}
+
+@online{wiki_slicesampling,
+    author = {Wikipedia},
+    title = {Slice sampling},
+    url = {https://en.wikipedia.org/wiki/Slice_sampling},
+    urldate = {2024-01-15}
+}
+
+@online{zeus_mcmc,
+    author = {The zeus-mcmc Development Team},
+    title = {zeus-mcmc Documentation},
+    url = {https://zeus-mcmc.readthedocs.io/en/latest/index.html},
+    urldate = {2024-01-15}
+}
+
+@online{gelman_rubin_statistic,
+    author = {Gelman, Andrew and Rubin, Donald B.},
+    title = {Inference from Iterative Simulation Using Multiple Sequences},
+    year = {1992},
+    journal = {Statistical Science},
+    volume = {7},
+    number = {4},
+    pages = {457-472},
+    url = {https://projecteuclid.org/euclid.ss/1177011136},
+    urldate = {2024-01-15}
+}
+
+@article{vanRavenzwaaij2018,
+    author = {van Ravenzwaaij, Don and Cassey, Peter and Brown, Scott D.},
+    title = {A simple introduction to Markov Chain Monte–Carlo sampling},
+    year = {2018},
+    journal = {Psychonomic Bulletin & Review},
+    volume = {25},
+    number = {1},
+    pages = {143-154},
+    doi = {10.3758/s13423-016-1015-8},
+    url = {https://doi.org/10.3758/s13423-016-1015-8}
+}
+
+# For why we thin chains
+@article{gareth_roberts_mcmc,
+    author = {Roberts, Gareth O. and Rosenthal, Jeffrey S.},
+    title = {Examples of Adaptive MCMC},
+    year = {2009},
+    journal = {Journal of Computational and Graphical Statistics},
+    volume = {18},
+    number = {2},
+    pages = {349-367},
+    doi = {10.1198/jcgs.2009.06134},
+    url = {https://www.statslab.cam.ac.uk/~grg/teaching/chapter12.pdf}
 }
