Fixed issues with the dockerfile and environment.yml file. Modified README.
Dockerfile:
Added a line to install pre-commit to the environment.
Environment.yml:
Removed the libgfortran packages which prevents the dockerfile to build the image.
README:
Modified the command examples.

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ For permissions reasons, the ```Dockerfile``` is not set up to pull the reposito
 To run the solver on a Docker container, one first has to build the image and run the container. This can be done as follows:
 
 ```bash
-$ docker build -t s2_coursework
+$ docker build -t s2_coursework .
 $ docker run --rm -ti s2_coursework
 ```
 
